minor refactiong
1. cache only necessary information
2. refactor services' code
3. don't ignore kodik's next episode for watch